fixed bug with list numbers on mobile

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -200,9 +200,13 @@ body
 }
 
 /* line 55, src/sass/partials/_modules.scss */
+@media (max-width: 640px)
+{
+    /* line 55, src/sass/partials/_modules.scss */
+}
 
-/* line 61, src/sass/partials/_modules.scss */
+/* line 65, src/sass/partials/_modules.scss */
 
-/* line 67, src/sass/partials/_modules.scss */
-/* line 69, src/sass/partials/_modules.scss */
+/* line 71, src/sass/partials/_modules.scss */
 /* line 73, src/sass/partials/_modules.scss */
+/* line 77, src/sass/partials/_modules.scss */
